--- a/public/heart_disease.ipynb
+++ b/public/heart_disease.ipynb
@@ -1560,7 +1560,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "filename = '../model/trained_model.sav'\n",
+    "filename = '../models/trained_model.sav'\n",
     "pickle.dump(model,open(filename,'wb'))"
    ]
   },
@@ -1570,7 +1570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_model = pickle.load(open('../model/trained_model.sav','rb'))"
+    "loaded_model = pickle.load(open('../models/trained_model.sav','rb'))"
    ]
   },
   {
